23/08/2020
-   Updated warp spell description

22/08/2020
-   Prestige info page
-   "Mod Warp" card
-   "Space Station Warp" card
-   Decreased exponential grow of space station price from 1.06 to 1.04
-   Doubled technology gain multiplier of origins
-   Space station page display "price/space" instead of "1e12 * space/price"
-   "Research initiative" buff from +1% per research lab to +1.5%

19/08/2020
-   Unused mods are auto assigned to higher priority in orderly fashion
-   Fixed issues with speed and acceleration
-   After prestige worker page point to "Miner"

18/08/2020
-   Auto modding based on priorities
-   Number formatting after 1e4 instead 1e3

17/08/2020
-   Optional priority one on full computing
-   Improved module page
-   Ui fixes
-   More themes
-   "Battle Warp" card
-   "Level 20 Researches" card
-   Two new researches
-   Shipyard utilities

16/08/2020
-   Auto mod
-   Auto departments
-   Balancement: less experience and cards, buildings prices
-   "More mod" card
-   "More departments" card
-   "Prestige multi doesn't decrease" card
-   "Space Mining" card
-   "Solar Energy" card

14/08/2020
-   Added "Auto save & refresh" as workaround for memory leaks
-   Improved memory management
-   Fixed "Advanced Space Stations" not unlocking
-   Fixed "Battle ETA" in case of warping

11/08/2020
-   Fixed "Production table" not updating
-   Fixed multiple origin at the same time
-   Fixed number formatting

05/08/2020
-   Enemy rebalanced: decreased enemy levels, increase search and production requirements
-   Space stations buff
-   Exponential storage capacity
-   Reduced damage reduction
-   Naval capacity card
-   Various fix

28/07/2020
-   Prestige bug fixed
-   Added some module descriptions

27/07/2020
-   Fixed Fleet number on Fleet>Jobs
-   Added save download
-   Added csv report download

26/07/2020
-   "Drone production prestige" now act as described
-   Ui fix
-   "Disable small(2 sec) warp notifications". Increased from 1 sec to 2 sec