@@ -209,6 +209,7 @@
         [isEnemy]="true"
         [enemyCell]="true"
         [fleetNum]="cell"
+        [enemy]="ms.game.enemyManager.currentEnemy"
         nzSize="small"
         update="true"
       ></app-ships-view
