@@ -74,7 +74,7 @@
     </div>
   </div>
   <div fxFlex="50%">
-    <app-ships-view [designs]="enemy.designs" [isEnemy]="true">
+    <app-ships-view [designs]="enemy.designs" [isEnemy]="true" [enemy]="enemy">
     </app-ships-view>
   </div>
 </div>
