@@ -198,6 +198,9 @@
           Enemies may have ground defences, planetary defences works exactly
           like ships but can be completely destroyed by Nuke. Ground defences
           don't require energy because are attached to the planet energy grid.
+          <br />
+          After level 50 enemies will have anti missiles, one anti missiles
+          completely block one nuke.
         </p>
       </ng-template>
     </nz-tab>
